--- a/jbake.properties
+++ b/jbake.properties
@@ -1,6 +1,7 @@
-site.host=http://jbake.org
-render.tags=false
+site.host=http://bauhan.name
+render.tags=true
 render.sitemap=true
+render.index=false
 template.index.file=index.thyme
 template.archive.file=archive.thyme
 template.tag.file=tags.thyme
